[package]
name = "ghtool"
version = "0.1.0"
authors = ["Søren Mortensen <soren@sorenmortensen.com>"]
license = "Apache-2.0"
description = "Tool for interacting with all the extra data associated with a GitHub repository that doesn't come from git itself"

[dependencies]
clap = { version = "2.30", features = ["wrap_help"] }
ghtool-label = { path = "label", version = "0.1.0" }
ghtool-util = { path = "util", version = "0.1.0" }
log = "0.3"
pretty_logger = "0.1"
serde = "1.0"
serde_derive = "1.0"
toml = "0.4"

[workspace]
