[package]
name = "ghlblcpy"
version = "0.1.0"
authors = ["Søren Mortensen <soren@sorenmortensen.com>"]
license = "Apache-2.0"

[lib]
name = "ghlabelcpy"
path = "src/lib.rs"

[[bin]]
name = "ghlabelcpy"
doc = false

[dependencies]
clap = "2.30"
futures = "0.1"
hubcaps = "0.4"
hyper = "0.11"
log = "0.3"
pretty_logger = "0.1"
regex = "0.2"
serde = "1.0"
serde_derive = "1.0"
tokio-core = "0.1"
toml = "0.4"
